eval SupCon_factor orig+stylize and some image selection

--- a/adaIN_styletransfer.ipynb
+++ b/adaIN_styletransfer.ipynb
@@ -189,6 +189,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- examples for style transfer (use images that are of square size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "images_root = \"./datasets/animals10/raw-img/\"\n",
+    "images = [\"cane/OIP-YWxBFVtj0iICNbe5ims-GAHaHa.jpeg\",\n",
+    "          \"cane/OIP-XGZqKHOq-ht96RjQ_K3UiwHaHa.jpeg\",\n",
+    "          \"farfalla/OIP-s-JeogHYWqye9iceaD0_owHaHa.jpeg\",\n",
+    "          \"gallina/OIP-Ouo5H33j-vIExceWpQ8lUwHaHa.jpeg\",\n",
+    "          \"gatto/126.jpeg\",\n",
+    "          \"gatto/ea34b5092bfd093ed1584d05fb1d4e9fe777ead218ac104497f5c978a7ebb0bb_640.jpg\",\n",
+    "          \"scoiattolo/OIP-pPNT2MCKFfteNzvPkV8f6wHaHa.jpeg\",\n",
+    "          \"scoiattolo/OIP-t8etyX9jdqWm7RFe3POH7AHaHa.jpeg\"]\n",
+    "\n",
+    "paintings_root = \"./datasets/adaIN/paintings/selected_for_styletransfer/test/\"\n",
+    "paintings = [\"380.jpg\", \"1626.jpg\", \"1697.jpg\", \"2563.jpg\", \"8226.jpg\", \"13700.jpg\"]\n",
+    "\n",
+    "examples_root = \"./datasets/adaIN/experiments/example_imgs/\"\n",
+    "examples_content = os.path.join(examples_root, \"content\")\n",
+    "examples_style = os.path.join(examples_root, \"style\")\n",
+    "examples_output = os.path.join(examples_root, \"output\")\n",
+    "\n",
+    "# copy the content and stye images into a folder\n",
+    "for c in images:\n",
+    "    image_loader(os.path.join(images_root, c)).save(os.path.join(examples_content, c.replace(\"/\", \"_\")))\n",
+    "\n",
+    "for s in paintings:\n",
+    "    image_loader(os.path.join(paintings_root, s)).save(os.path.join(examples_style, s))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adaIN(path_shape=examples_content, path_style=examples_style, path_output=examples_output)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "- stylize each shape with one random selected texture of an other class (for trainings and test data)"
    ]
   },
