--- a/validation_compile_results.ipynb
+++ b/validation_compile_results.ipynb
@@ -68,6 +68,361 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train on stylized\n",
+    "# model_ids = [4, 7, 3,\n",
+    "#              21, 20]\n",
+    "# train on EED\n",
+    "model_ids = [4, 5, 0, 1,\n",
+    "             21, 17, 18,\n",
+    "             15, 14, 12]\n",
+    "# cityscapes\n",
+    "# model_ids = [10, 8,\n",
+    "#              23]\n",
+    "\n",
+    "\n",
+    "# model_ids = [4, 7, 3, 5, 0, 1,\n",
+    "#              21, 20, 17, 18,\n",
+    "#              15, 14, 12]\n",
+    "\n",
+    "# model_ids = [4, 7, 3, 5, 0, 1,\n",
+    "#              21, 20, 17, 18,\n",
+    "#              15, 14, 12,\n",
+    "#              10, 8,\n",
+    "#              23]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_names = df_modelNames.loc[model_ids][\"model_name\"].values\n",
+    "\n",
+    "root_model, _ = models_dict[model_names[9]]\n",
+    "path_folder, _ = ut_val.get_paths_from_model_checkpoint(root_model)\n",
+    "params = open_csv_file(os.path.join(path_folder, \"params.csv\"))\n",
+    "\n",
+    "tmp_params = dict()\n",
+    "for p in params:\n",
+    "    tmp_params[p] = [params[p]]\n",
+    "\n",
+    "df_params = pd.DataFrame.from_dict(tmp_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['./save/SupCon/animals10_diff_-1+4000/SupCon_animals10_diff_-1+4000_resnet18_lr_0.125_decay_0.0001_bsz_26_temp_0.1_trial_0_colorAugSameShapeAug_cosine/models/last.pth']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>dataset</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>aug</th>\n",
+       "      <th>epochs</th>\n",
+       "      <th>learning_rate</th>\n",
+       "      <th>method</th>\n",
+       "      <th>temp</th>\n",
+       "      <th>related_factor</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>animals10_diff_-1+4000</td>\n",
+       "      <td>(0.3816, 0.3683, 0.3052)</td>\n",
+       "      <td>(0.3281, 0.3198, 0.3055)</td>\n",
+       "      <td>[sameResizedCrop, sameHorizontalFlip, colorJit...</td>\n",
+       "      <td>100</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>SupCon</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>100.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  dataset                      mean                       std  \\\n",
+       "0  animals10_diff_-1+4000  (0.3816, 0.3683, 0.3052)  (0.3281, 0.3198, 0.3055)   \n",
+       "\n",
+       "                                                 aug  epochs  learning_rate  \\\n",
+       "0  [sameResizedCrop, sameHorizontalFlip, colorJit...     100           0.02   \n",
+       "\n",
+       "   method  temp  related_factor  \n",
+       "0  SupCon   0.1           100.0  "
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "if \"num_classes\" in df_params:\n",
+    "    # CE\n",
+    "    # df_tmp = df_params[[\"dataset\", \"num_classes\", \"size\", \"mean\", \"std\", \"diff_p\",\n",
+    "    #                     \"aug\", \"resizedCrop\", \"horizontalFlip\", \"colorJitter\", \"grayscale\",\n",
+    "    #                     \"model\", \"epochs\", \"batch_size\", \"learning_rate\", \"cosine\", \"lr_decay_rate\", \"momentum\", \"weight_decay\"]]\n",
+    "    df_tmp = df_params[[\"dataset\", \"num_classes\", \"mean\", \"std\", \"diff_p\",\n",
+    "                        \"aug\",\n",
+    "                        \"epochs\", \"learning_rate\"]]\n",
+    "else:\n",
+    "    # SupCon\n",
+    "    # df_tmp = df_params[[\"dataset\", \"size\", \"mean\", \"std\",\n",
+    "    #                     \"aug\", \"resizedCrop\", \"horizontalFlip\", \"colorJitter\", \"grayscale\",\n",
+    "    #                     \"model\", \"epochs\", \"batch_size\", \"learning_rate\", \"cosine\", \"lr_decay_rate\", \"momentum\", \"weight_decay\",\n",
+    "    #                     \"method\", \"temp\", \"related_factor\"]]\n",
+    "    df_tmp = df_params[[\"dataset\",\"mean\", \"std\",\n",
+    "                        \"aug\",\n",
+    "                        \"epochs\",\"learning_rate\",\n",
+    "                        \"method\", \"temp\", \"related_factor\"]]\n",
+    "\n",
+    "if \"ckpt\" in df_params:\n",
+    "    print(df_params[\"ckpt\"].values)\n",
+    "\n",
+    "df_tmp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'batch_size',\n",
+       " 'colorJitter',\n",
+       " 'cosine',\n",
+       " 'grayscale',\n",
+       " 'horizontalFlip',\n",
+       " 'lr_decay_rate',\n",
+       " 'model',\n",
+       " 'momentum',\n",
+       " 'num_workers',\n",
+       " 'print_freq',\n",
+       " 'resizedCrop',\n",
+       " 'size',\n",
+       " 'trial',\n",
+       " 'warm',\n",
+       " 'weight_decay'}"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "params_list = []\n",
+    "\n",
+    "model_names = df_modelNames.loc[model_ids][\"model_name\"].values\n",
+    "for mn in model_names:\n",
+    "    root_model, _ = models_dict[mn]\n",
+    "    path_folder, _ = ut_val.get_paths_from_model_checkpoint(root_model)\n",
+    "    params = open_csv_file(os.path.join(path_folder, \"params.csv\"))\n",
+    "\n",
+    "    params_list.append(params)\n",
+    "\n",
+    "universal_candidates = []\n",
+    "\n",
+    "par0 = params_list[0]\n",
+    "for par in params_list[1:]:\n",
+    "    for p in par0:\n",
+    "        if p in par and par0[p] == par[p]:\n",
+    "            universal_candidates.append(p)\n",
+    "\n",
+    "universal_candidates = set(universal_candidates)\n",
+    "\n",
+    "ruled_out_candidates = []\n",
+    "for p in universal_candidates:\n",
+    "    for i in range(len(params_list)):\n",
+    "        for j in range(len(params_list[i:])):\n",
+    "            parI = params_list[i]\n",
+    "            parJ = params_list[j]\n",
+    "            if p not in parI or p not in parJ or parI[p] != parJ[p]:\n",
+    "                ruled_out_candidates.append(p)\n",
+    "\n",
+    "universal_candidates.difference(ruled_out_candidates)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>size</th>\n",
+       "      <td>300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>resizedCrop</th>\n",
+       "      <td>[0.2, 1.0, 0.75, 1.3333333333333333]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>horizontalFlip</th>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>colorJitter</th>\n",
+       "      <td>[0.8, 0.4, 0.4, 0.4, 0.4]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>grayscale</th>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>model</th>\n",
+       "      <td>resnet18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>batch_size</th>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cosine</th>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>lr_decay_rate</th>\n",
+       "      <td>0.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>momentum</th>\n",
+       "      <td>0.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>weight_decay</th>\n",
+       "      <td>0.0001</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                   0\n",
+       "size                                             300\n",
+       "resizedCrop     [0.2, 1.0, 0.75, 1.3333333333333333]\n",
+       "horizontalFlip                                   0.5\n",
+       "colorJitter                [0.8, 0.4, 0.4, 0.4, 0.4]\n",
+       "grayscale                                        0.2\n",
+       "model                                       resnet18\n",
+       "batch_size                                        26\n",
+       "cosine                                          True\n",
+       "lr_decay_rate                                    0.1\n",
+       "momentum                                         0.9\n",
+       "weight_decay                                  0.0001"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_params[[\"size\",\n",
+    "           \"resizedCrop\", \"horizontalFlip\", \"colorJitter\", \"grayscale\",\n",
+    "           \"model\", \"batch_size\", \"cosine\", \"lr_decay_rate\", \"momentum\", \"weight_decay\"]].T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\begin{tabular}{ll}\n",
+      "\\toprule\n",
+      " & 0 \\\\\n",
+      "\\midrule\n",
+      "size & 300 \\\\\n",
+      "resizedCrop & [0.2, 1.0, 0.75, 1.3333333333333333] \\\\\n",
+      "horizontalFlip & 0.500000 \\\\\n",
+      "colorJitter & [0.8, 0.4, 0.4, 0.4, 0.4] \\\\\n",
+      "grayscale & 0.200000 \\\\\n",
+      "model & resnet18 \\\\\n",
+      "batch\\_size & 26 \\\\\n",
+      "cosine & True \\\\\n",
+      "lr\\_decay\\_rate & 0.100000 \\\\\n",
+      "momentum & 0.900000 \\\\\n",
+      "weight\\_decay & 0.000100 \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_params[[\"size\",\n",
+    "           \"resizedCrop\", \"horizontalFlip\", \"colorJitter\", \"grayscale\",\n",
+    "           \"model\", \"batch_size\", \"cosine\", \"lr_decay_rate\", \"momentum\", \"weight_decay\"]].T.to_latex(\n",
+    ").replace(\"_\", \"\\_\"))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
